Started work on bug that can die UI
hey that rhymes whoa

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,4 @@ ehthumbs.db
 Local/*
 Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
 *.asset
+Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
