UI responds to death

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ Local/*
 Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
 *.asset
 Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
+Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
