Bug that Can Die Dash Fix and sorting

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,4 @@ Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
 *.asset
 Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
 Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
+Fall Game Jam 2021/UserSettings/EditorUserSettings.asset
